--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../../assets/fonts/PlayfairDisplay-Bold.woff2') format('woff2');
+}
+
 @import 'tailwindcss';
 
 * {
